testsuite/tests/arrows/gadt/ArrowPatSyn2.stderr

ArrowPatSyn2.hs:16:15: error: [GHC-64525]
    • Proc patterns cannot use existential or GADT data constructors
    • In the pattern: P x
      In the expression: proc (P x) -> MkT -< x
      In an equation for ‘panic’: panic = proc (P x) -> MkT -< x
